# SO1_1S2025

./: .gitignore  README.md
Proyecto1/: Manual.md
Proyecto1/Contenedores/: Inforamacion.txt  del.sh  script.sh
Proyecto1/Modulos/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .sysinfo.ko.cmd  .sysinfo.mod.cmd  .sysinfo.mod.o.cmd  .sysinfo.o.cmd  .sysinfo_201513656.ko.cmd  .sysinfo_201513656.mod.cmd  .sysinfo_201513656.mod.o.cmd  .sysinfo_201513656.o.cmd  Makefile  sysinfo.c  sysinfo.ko  sysinfo.mod  sysinfo.mod.c  sysinfo_201513656.c  sysinfo_201513656.ko  sysinfo_201513656.mod  sysinfo_201513656.mod.c
Proyecto1/sevice_rust/: Cargo.toml
Proyecto1/sevice_rust/src/: main.rs
Proyecto2/: .gitignore  Manual Tecnico.md  build-images.sh  deploy-local.sh
Proyecto2/api_rest/: Cargo.toml
Proyecto2/consumers/: Dockerfile-kafka  Dockerfile-rabbitmq  Kafka.go  kafka_consumer.go  rabitttmq_consumer.go
Proyecto2/consumers/kafka-consumer/: Dockerfile  go.mod  main.go
Proyecto2/consumers/rabbitmq-consumer/: go.mod  main.go
Proyecto2/go-api/: Dockerfile-kafka  Dockerfile-rabbitmq  main.go
Proyecto2/go-api/grpc-client/: Dockerfile  (+2 more)
Proyecto2/grpc-server/: kafka_client.go  rabitt_client.go
Proyecto2/harbor/: install-harbor.txt  setup-harbor.sh
Proyecto2/locust/: Dockerfile  equirements.txt  locustfile.py
Proyecto2/proto/: clima.proto  weather.proto
Proyecto2/rust-api/: Cargo.toml  Dockerfile  dockerfile
Proyecto2/rust-api/src/: main.rs
Proyecto2/scripts/: build-images-gcp.sh  build-images.sh  deploy-gcp.sh  deploy-local.sh  setup-gcp.sh
(+27 files in other folders)
