[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
reqwest = { version = "0.11.18", features = ["json"] }
log = "0.4.19"
env_logger = "0.10.0"
dotenv = "0.15.0"
futures = "0.3.28"